<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.devlat.veri.intentimplicits.MainActivity">

    <EditText
        android:id="@+id/websiteUri"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/https_www_example_com" />

    <Button
        android:id="@+id/OpenWeb"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:background="#870fff"
        android:text="@string/open_website"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/LocInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/jakarta_bandung_bali" />

    <Button
        android:id="@+id/OpenLoc"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:background="#879fff"
        android:text="@string/open_location"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/shareIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:hint="@string/i_dont_care" />

    <Button
        android:id="@+id/shareBtn"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:background="#856fff"
        android:text="@string/share_this_text"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textStyle="bold" />
</LinearLayout>
